# cargo-scorecard

./: Cargo.toml
src/: main.rs
