[package]
name = "cargo-scorecard"
version = "0.1.0"
edition = "2024"
description = "Generate the OpenSSF Scorecard for the dependencies in a Rust repo."
license = "MIT"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
